feat:(security,finalisation) poc finaliser et opérationnel